<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FaceRecognition" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ue0-pK-arf">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="627"/>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yod-nU-wvh">
                                <rect key="frame" x="0.0" y="637" width="375" height="30"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KBL-7n-3ME">
                                        <rect key="frame" x="0.0" y="0.0" width="31" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Select Imaage Button"/>
                                        <state key="normal" title="選択">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RP3-4t-gCr">
                                        <rect key="frame" x="54.5" y="0.0" width="50" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Face Detect Button"/>
                                        <state key="normal" title=" 顔検出"/>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQZ-nJ-GXT">
                                        <rect key="frame" x="127.5" y="0.0" width="62" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Face Landmarks Button"/>
                                        <state key="normal" title="目印検出"/>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AQq-ir-pHm">
                                        <rect key="frame" x="213" y="0.0" width="62" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Mozaiku Button"/>
                                        <state key="normal" title="モザイク"/>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xEc-06-Sz5">
                                        <rect key="frame" x="298" y="0.0" width="77" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Face Mozaiku Button"/>
                                        <state key="normal" title="顔モザイク"/>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ue0-pK-arf" secondAttribute="trailing" id="43n-HG-n2g"/>
                            <constraint firstItem="yod-nU-wvh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Qq-cf-gpo"/>
                            <constraint firstItem="yod-nU-wvh" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8ny-eZ-38o"/>
                            <constraint firstItem="ue0-pK-arf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Nal-xy-urZ"/>
                            <constraint firstItem="ue0-pK-arf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lqb-6t-pND"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yod-nU-wvh" secondAttribute="trailing" id="m4x-4h-lw6"/>
                            <constraint firstItem="yod-nU-wvh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ue0-pK-arf" secondAttribute="bottom" constant="10" id="nuu-6L-ehy"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="faceDetectButton" destination="RP3-4t-gCr" id="ZtH-Ys-1Tp"/>
                        <outlet property="faceLandmarksButton" destination="gQZ-nJ-GXT" id="RYp-TG-PIC"/>
                        <outlet property="faceMozaikuButton" destination="xEc-06-Sz5" id="ybR-Ad-YjR"/>
                        <outlet property="imageView" destination="ue0-pK-arf" id="oCH-Na-I61"/>
                        <outlet property="mozaikuButton" destination="AQq-ir-pHm" id="eEG-US-efG"/>
                        <outlet property="selectImaageButton" destination="KBL-7n-3ME" id="fWb-kA-Xfo"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="32.799999999999997" y="33.733133433283363"/>
        </scene>
    </scenes>
</document>
