...
                    picker.modalPresentationStyle = .popover
                    picker.popoverPresentationController?.sourceView = self.view
                    picker.popoverPresentationController?.sourceRect = self.selectImaageButton.frame
                }
                self.launchPhotoPicker(.photoLibrary)
            }))
            alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
            // on iPad this is a popover
            alert.popoverPresentationController?.sourceView = self.view
            alert.popoverPresentationController?.sourceRect = self.selectImaageButton.frame
            
            self.present(alert, animated: true, completion: nil)

...
