//
//  FaceRecognitionUITests.swift
//  FaceRecognitionUITests
//
//  Created by nijibox088 on 2019/01/25.
//  Copyright © 2019年 recruit. All rights reserved.
//

import XCTest

class FaceRecognitionUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testMain() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        app.buttons["Select Imaage Button"].tap()
        // Photo Libraryを選択するとテストが終わってしまう
        app.sheets.buttons["Cancel"].tap()
        app.buttons["Face Detect Button"].tap()
        app.buttons["Face Landmarks Button"].tap()
        app.buttons["Mozaiku Button"].tap()
        app.buttons["Face Mozaiku Button"].tap()
    }

}
